Fixed an issue where images wouldn't fit correctly in the jumbotron if too big

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,12 +1,11 @@
 .container {
   position: absolute;
-  padding-top:250px;
-  /* margin: auto; */
+  padding-top:40px;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  width: 600px;
+  /* width: 600px; */
   height: 100px;
   border-radius: 3px;
 }
@@ -15,10 +14,15 @@
     background-color:#4a4a4a;
 }
 
+.jumbotron img {
+  max-width:75%;
+}
+
 .jumbotron h3 {
     color:white;
 }
 
 body {
   background-color:#b3b3b3;
+  text-align:center;
 }
